--- a/documents.html
+++ b/documents.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2.6">
 </head>
 
 <body>
@@ -45,38 +45,40 @@
         </div>
     </nav>
 
-    <!-- Documents Section -->
-    <section class="py-5 mt-5">
-        <div class="container">
-            <!-- Header with Upload Button -->
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h2 class="fw-bold section-title">My Documents</h2>
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#uploadDocumentModal">
-                    <i class="bi bi-upload me-2"></i>Upload Document
-                </button>
-            </div>
+    <main class="flex-grow-1">
+        <!-- Documents Section -->
+        <section class="py-5 mt-5">
+            <div class="container">
+                <!-- Header with Upload Button -->
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2 class="fw-bold section-title">My Documents</h2>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#uploadDocumentModal">
+                        <i class="bi bi-upload me-2"></i>Upload Document
+                    </button>
+                </div>
 
-            <!-- Documents List -->
-            <div class="row g-4">
-                <!-- Documents will be loaded dynamically -->
-                <div class="col-12 text-center">
-                    <div class="spinner-border text-primary" role="status">
-                        <span class="visually-hidden">Loading documents...</span>
+                <!-- Documents List -->
+                <div class="row g-4">
+                    <!-- Documents will be loaded dynamically -->
+                    <div class="col-12 text-center">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Loading documents...</span>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <!-- Empty State (hidden by default, shown when no documents) -->
-            <div id="emptyState" class="text-center py-5 d-none">
-                <i class="bi bi-folder-x text-muted" style="font-size: 5rem;"></i>
-                <h4 class="mt-3 text-muted">No Documents Yet</h4>
-                <p class="text-muted">Upload your first document to get started.</p>
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#uploadDocumentModal">
-                    <i class="bi bi-upload me-2"></i>Upload Document
-                </button>
+                <!-- Empty State (hidden by default, shown when no documents) -->
+                <div id="emptyState" class="text-center py-5 d-none">
+                    <i class="bi bi-folder-x text-muted" style="font-size: 5rem;"></i>
+                    <h4 class="mt-3 text-muted">No Documents Yet</h4>
+                    <p class="text-muted">Upload your first document to get started.</p>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#uploadDocumentModal">
+                        <i class="bi bi-upload me-2"></i>Upload Document
+                    </button>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- Upload Document Modal -->
     <div class="modal fade" id="uploadDocumentModal" tabindex="-1">
@@ -171,16 +173,16 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
-            <p class="mb-0">&copy; 2024 DevShowcase. All rights reserved.</p>
+            <p class="mb-0">&copy; 2026 DevShowcase. All rights reserved.</p>
         </div>
     </footer>
 
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=1.1"></script>
+    <script src="js/script.js?v=2.6"></script>
 </body>
 
 </html>
