--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2.6">
 </head>
 
 <body>
@@ -45,83 +45,86 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero-section bg-primary text-white py-5 mt-5">
-        <div class="container py-5 text-center">
-            <h1 class="display-3 fw-bold mb-3">Welcome to Community Showcase</h1>
-            <p class="lead mb-4 fs-4">Discover the amazing projects and digital documents created by our talented
-                students.</p>
-            <div class="d-flex justify-content-center gap-3">
-                <a href="register.html" class="btn btn-light btn-lg px-4 fw-bold">Join the Community</a>
-                <a href="#members" class="btn btn-outline-light btn-lg px-4">Meet Members</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Community Members Section -->
-    <section id="members" class="py-5">
-        <div class="container">
-            <div class="d-flex justify-content-between align-items-end mb-4">
-                <div>
-                    <h2 class="fw-bold mb-0">Community Members</h2>
-                    <p class="text-muted mb-0">Meet the talented developers in our network</p>
+    <main class="flex-grow-1">
+        <!-- Hero Section -->
+        <section class="hero-section bg-primary text-white py-5 mt-5">
+            <div class="container py-5 text-center">
+                <h1 class="display-3 fw-bold mb-3">Welcome to Community Showcase</h1>
+                <p class="lead mb-4 fs-4">Discover the amazing projects and digital documents created by our
+                    talented
+                    students.</p>
+                <div class="d-flex justify-content-center gap-3">
+                    <a href="register.html" class="btn btn-light btn-lg px-4 fw-bold">Join the Community</a>
+                    <a href="#members" class="btn btn-outline-light btn-lg px-4">Meet Members</a>
                 </div>
             </div>
-            <div id="membersContainer" class="row g-4">
-                <!-- Members will be loaded dynamically -->
-                <div class="col-12 text-center py-5">
-                    <div class="spinner-border text-primary" role="status">
-                        <span class="visually-hidden">Loading...</span>
+        </section>
+
+        <!-- Community Members Section -->
+        <section id="members" class="py-5">
+            <div class="container">
+                <div class="d-flex justify-content-between align-items-end mb-4">
+                    <div>
+                        <h2 class="fw-bold mb-0">Community Members</h2>
+                        <p class="text-muted mb-0">Meet the talented developers in our network</p>
+                    </div>
+                </div>
+                <div id="membersContainer" class="row g-4">
+                    <!-- Members will be loaded dynamically -->
+                    <div class="col-12 text-center py-5">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Community Projects Section -->
-    <section class="py-5 bg-light">
-        <div class="container">
-            <div class="d-flex justify-content-between align-items-end mb-4">
-                <div>
-                    <h2 class="fw-bold mb-0">Recent Projects</h2>
-                    <p class="text-muted mb-0">Explore the latest technical contributions</p>
+        <!-- Community Projects Section -->
+        <section class="py-5 bg-light">
+            <div class="container">
+                <div class="d-flex justify-content-between align-items-end mb-4">
+                    <div>
+                        <h2 class="fw-bold mb-0">Recent Projects</h2>
+                        <p class="text-muted mb-0">Explore the latest technical contributions</p>
+                    </div>
+                    <a href="projects.html?view=all" class="btn btn-primary btn-sm">View All Projects</a>
                 </div>
-                <a href="projects.html" class="btn btn-primary btn-sm">View All Projects</a>
-            </div>
-            <div id="showcaseProjectsContainer" class="row g-4">
-                <!-- Projects will be loaded dynamically -->
-                <div class="col-12 text-center py-5">
-                    <div class="spinner-border text-primary" role="status">
-                        <span class="visually-hidden">Loading...</span>
+                <div id="showcaseProjectsContainer" class="row g-4">
+                    <!-- Projects will be loaded dynamically -->
+                    <div class="col-12 text-center py-5">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Community Documents Section -->
-    <section class="py-5">
-        <div class="container">
-            <div class="d-flex justify-content-between align-items-end mb-4">
-                <div>
-                    <h2 class="fw-bold mb-0">Shared Documents</h2>
-                    <p class="text-muted mb-0">Access useful resources and documentation</p>
+        <!-- Community Documents Section -->
+        <section class="py-5">
+            <div class="container">
+                <div class="d-flex justify-content-between align-items-end mb-4">
+                    <div>
+                        <h2 class="fw-bold mb-0">Shared Documents</h2>
+                        <p class="text-muted mb-0">Access useful resources and documentation</p>
+                    </div>
+                    <a href="documents.html?view=all" class="btn btn-primary btn-sm">View All Documents</a>
                 </div>
-                <a href="documents.html" class="btn btn-primary btn-sm">View All Documents</a>
-            </div>
-            <div id="showcaseDocumentsContainer" class="row g-4">
-                <!-- Documents will be loaded dynamically -->
-                <div class="col-12 text-center py-5">
-                    <div class="spinner-border text-primary" role="status">
-                        <span class="visually-hidden">Loading...</span>
+                <div id="showcaseDocumentsContainer" class="row g-4">
+                    <!-- Documents will be loaded dynamically -->
+                    <div class="col-12 text-center py-5">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
             <p class="mb-0">&copy; 2024 DevShowcase. All rights reserved.</p>
         </div>
@@ -130,7 +133,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=2.3"></script>
+    <script src="js/script.js?v=2.6"></script>
 </body>
 
 </html>
