--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,9 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2.6">
 </head>
+
 <body class="auth-body">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -34,91 +36,85 @@
         </div>
     </nav>
 
-    <!-- Login Form Section -->
-    <section class="py-5">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-5">
-                    <div class="card shadow-lg border-0 auth-card">
-                        <div class="card-body p-5">
-                            <div class="text-center mb-4">
-                                <i class="bi bi-person-circle text-primary" style="font-size: 4rem;"></i>
-                                <h2 class="mt-3 fw-bold">Welcome Back</h2>
-                                <p class="text-muted">Sign in to your DevShowcase account</p>
-                            </div>
-
-                            <!-- Login Form -->
-                            <form id="loginForm">
-                                <div class="mb-3">
-                                    <label for="email" class="form-label fw-semibold">Email Address</label>
-                                    <div class="input-group">
-                                        <span class="input-group-text bg-light">
-                                            <i class="bi bi-envelope text-primary"></i>
-                                        </span>
-                                        <input type="email" 
-                                               class="form-control" 
-                                               id="email"
-                                               name="email"
-                                               placeholder="Enter your email" 
-                                               required>
-                                    </div>
+    <main class="flex-grow-1">
+        <!-- Login Form Section -->
+        <section class="py-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-5">
+                        <div class="card shadow-lg border-0 auth-card">
+                            <div class="card-body p-5">
+                                <div class="text-center mb-4">
+                                    <i class="bi bi-person-circle text-primary" style="font-size: 4rem;"></i>
+                                    <h2 class="mt-3 fw-bold">Welcome Back</h2>
+                                    <p class="text-muted">Sign in to your DevShowcase account</p>
                                 </div>
 
-                                <div class="mb-3">
-                                    <label for="password" class="form-label fw-semibold">Password</label>
-                                    <div class="input-group">
-                                        <span class="input-group-text bg-light">
-                                            <i class="bi bi-lock text-primary"></i>
-                                        </span>
-                                        <input type="password" 
-                                               class="form-control" 
-                                               id="password"
-                                               name="password"
-                                               placeholder="Enter your password" 
-                                               required>
-                                        <button class="btn btn-outline-secondary" 
-                                                type="button" 
-                                                id="togglePassword">
-                                            <i class="bi bi-eye"></i>
+                                <!-- Login Form -->
+                                <form id="loginForm">
+                                    <div class="mb-3">
+                                        <label for="email" class="form-label fw-semibold">Email Address</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text bg-light">
+                                                <i class="bi bi-envelope text-primary"></i>
+                                            </span>
+                                            <input type="email" class="form-control" id="email" name="email"
+                                                placeholder="Enter your email" required>
+                                        </div>
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <label for="password" class="form-label fw-semibold">Password</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text bg-light">
+                                                <i class="bi bi-lock text-primary"></i>
+                                            </span>
+                                            <input type="password" class="form-control" id="password" name="password"
+                                                placeholder="Enter your password" required>
+                                            <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                                                <i class="bi bi-eye"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+
+                                    <div class="mb-3 form-check">
+                                        <input type="checkbox" class="form-check-input" id="rememberMe"
+                                            name="remember_me">
+                                        <label class="form-check-label" for="rememberMe">
+                                            Remember me
+                                        </label>
+                                    </div>
+
+                                    <div class="d-grid mb-3">
+                                        <button type="submit" class="btn btn-primary btn-lg">
+                                            <i class="bi bi-box-arrow-in-right me-2"></i>Sign In
                                         </button>
                                     </div>
-                                </div>
 
-                                <div class="mb-3 form-check">
-                                    <input type="checkbox" class="form-check-input" id="rememberMe" name="remember_me">
-                                    <label class="form-check-label" for="rememberMe">
-                                        Remember me
-                                    </label>
-                                </div>
+                                    <div class="text-center">
+                                        <a href="#" class="text-decoration-none text-primary">Forgot password?</a>
+                                    </div>
+                                </form>
 
-                                <div class="d-grid mb-3">
-                                    <button type="submit" class="btn btn-primary btn-lg">
-                                        <i class="bi bi-box-arrow-in-right me-2"></i>Sign In
-                                    </button>
-                                </div>
+                                <hr class="my-4">
 
                                 <div class="text-center">
-                                    <a href="#" class="text-decoration-none text-primary">Forgot password?</a>
+                                    <p class="mb-0 text-muted">
+                                        Don't have an account?
+                                        <a href="register.html"
+                                            class="text-decoration-none fw-semibold text-primary">Sign Up</a>
+                                    </p>
                                 </div>
-                            </form>
-
-                            <hr class="my-4">
-
-                            <div class="text-center">
-                                <p class="mb-0 text-muted">
-                                    Don't have an account? 
-                                    <a href="register.html" class="text-decoration-none fw-semibold text-primary">Sign Up</a>
-                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
             <p class="mb-0">&copy; 2024 DevShowcase. All rights reserved.</p>
         </div>
@@ -127,7 +123,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js"></script>
+    <script src="js/script.js?v=2.6"></script>
 </body>
-</html>
 
+</html>
