--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2.6">
 </head>
 
 <body>
@@ -45,129 +45,131 @@
         </div>
     </nav>
 
-    <!-- Profile Section -->
-    <section class="py-5 mt-5">
-        <div class="container">
-            <div class="row">
-                <!-- Profile Card -->
-                <div class="col-lg-4 mb-4">
-                    <div class="card shadow-sm border-0 h-100">
-                        <div class="card-body text-center p-4">
-                            <!-- Profile Picture -->
-                            <div class="position-relative d-inline-block mb-3">
-                                <img src="https://via.placeholder.com/200x200/4a90e2/ffffff?text=Profile"
-                                    alt="Profile Picture" class="rounded-circle img-fluid profile-img-large">
-                                <button class="btn btn-sm btn-primary rounded-circle position-absolute"
-                                    style="bottom: 0; right: 0; width: 40px; height: 40px;" data-bs-toggle="modal"
-                                    data-bs-target="#uploadPhotoModal" title="Change Profile Picture">
-                                    <i class="bi bi-camera"></i>
+    <main class="flex-grow-1">
+        <!-- Profile Section -->
+        <section class="py-5 mt-5">
+            <div class="container">
+                <div class="row">
+                    <!-- Profile Card -->
+                    <div class="col-lg-4 mb-4">
+                        <div class="card shadow-sm border-0 h-100">
+                            <div class="card-body text-center p-4">
+                                <!-- Profile Picture -->
+                                <div class="position-relative d-inline-block mb-3">
+                                    <img src="https://via.placeholder.com/200x200/4a90e2/ffffff?text=Profile"
+                                        alt="Profile Picture" class="rounded-circle img-fluid profile-img-large">
+                                    <button class="btn btn-sm btn-primary rounded-circle position-absolute"
+                                        style="bottom: 0; right: 0; width: 40px; height: 40px;" data-bs-toggle="modal"
+                                        data-bs-target="#uploadPhotoModal" title="Change Profile Picture">
+                                        <i class="bi bi-camera"></i>
+                                    </button>
+                                </div>
+
+                                <h3 class="fw-bold mb-1" id="profileName">Loading...</h3>
+                                <p class="text-muted mb-3" id="profileJobTitle">Loading...</p>
+
+                                <!-- GitHub Link -->
+                                <div class="mb-3">
+                                    <a href="#" target="_blank" class="btn btn-outline-dark btn-sm w-100"
+                                        style="display:none;">
+                                        <i class="bi bi-github me-2"></i>GitHub Profile
+                                    </a>
+                                </div>
+
+                                <!-- Edit Profile Button -->
+                                <button class="btn btn-primary w-100 mb-3" data-bs-toggle="modal"
+                                    data-bs-target="#editProfileModal">
+                                    <i class="bi bi-pencil me-2"></i>Edit Profile
                                 </button>
-                            </div>
 
-                            <h3 class="fw-bold mb-1" id="profileName">Loading...</h3>
-                            <p class="text-muted mb-3" id="profileJobTitle">Loading...</p>
-
-                            <!-- GitHub Link -->
-                            <div class="mb-3">
-                                <a href="#" target="_blank" class="btn btn-outline-dark btn-sm w-100"
-                                    style="display:none;">
-                                    <i class="bi bi-github me-2"></i>GitHub Profile
-                                </a>
-                            </div>
-
-                            <!-- Edit Profile Button -->
-                            <button class="btn btn-primary w-100 mb-3" data-bs-toggle="modal"
-                                data-bs-target="#editProfileModal">
-                                <i class="bi bi-pencil me-2"></i>Edit Profile
-                            </button>
-
-                            <!-- CV Section -->
-                            <div class="card bg-light border-0 mb-3">
-                                <div class="card-body p-3">
-                                    <h6 class="fw-bold mb-2">
-                                        <i class="bi bi-file-earmark-person me-2 text-primary"></i>Curriculum Vitae
-                                    </h6>
-                                    <div id="cvContainer" class="text-center">
-                                        <p class="text-muted small mb-2">No CV uploaded yet</p>
-                                        <button class="btn btn-sm btn-outline-primary w-100" data-bs-toggle="modal"
-                                            data-bs-target="#uploadCVModal">
-                                            <i class="bi bi-upload me-1"></i>Upload CV
-                                        </button>
+                                <!-- CV Section -->
+                                <div class="card bg-light border-0 mb-3">
+                                    <div class="card-body p-3">
+                                        <h6 class="fw-bold mb-2">
+                                            <i class="bi bi-file-earmark-person me-2 text-primary"></i>Curriculum Vitae
+                                        </h6>
+                                        <div id="cvContainer" class="text-center">
+                                            <p class="text-muted small mb-2">No CV uploaded yet</p>
+                                            <button class="btn btn-sm btn-outline-primary w-100" data-bs-toggle="modal"
+                                                data-bs-target="#uploadCVModal">
+                                                <i class="bi bi-upload me-1"></i>Upload CV
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- Profile Details -->
-                <div class="col-lg-8">
-                    <!-- Bio Section -->
-                    <div class="card shadow-sm border-0 mb-4">
-                        <div class="card-header bg-white border-bottom py-3">
-                            <h5 class="mb-0 fw-bold">
-                                <i class="bi bi-person-badge me-2 text-primary"></i>About Me
-                            </h5>
-                        </div>
-                        <div class="card-body">
-                            <p class="mb-0">Loading bio...</p>
-                            <button class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal"
-                                data-bs-target="#editBioModal">
-                                <i class="bi bi-pencil me-1"></i>Edit Bio
-                            </button>
-                        </div>
-                    </div>
-
-                    <!-- Skills Section -->
-                    <div class="card shadow-sm border-0 mb-4">
-                        <div
-                            class="card-header bg-white border-bottom py-3 d-flex justify-content-between align-items-center">
-                            <h5 class="mb-0 fw-bold">
-                                <i class="bi bi-tools me-2 text-primary"></i>Skills
-                            </h5>
-                            <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal"
-                                data-bs-target="#editSkillsModal">
-                                <i class="bi bi-plus-circle me-1"></i>Add Skills
-                            </button>
-                        </div>
-                        <div class="card-body">
-                            <div id="skillsContainer">
-                                <!-- Skills will be loaded dynamically -->
-                                <p class="text-muted">Loading skills...</p>
+                    <!-- Profile Details -->
+                    <div class="col-lg-8">
+                        <!-- Bio Section -->
+                        <div class="card shadow-sm border-0 mb-4">
+                            <div class="card-header bg-white border-bottom py-3">
+                                <h5 class="mb-0 fw-bold">
+                                    <i class="bi bi-person-badge me-2 text-primary"></i>About Me
+                                </h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="mb-0">Loading bio...</p>
+                                <button class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal"
+                                    data-bs-target="#editBioModal">
+                                    <i class="bi bi-pencil me-1"></i>Edit Bio
+                                </button>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- Contact Information -->
-                    <div class="card shadow-sm border-0">
-                        <div class="card-header bg-white border-bottom py-3">
-                            <h5 class="mb-0 fw-bold">
-                                <i class="bi bi-envelope me-2 text-primary"></i>Contact Information
-                            </h5>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <strong>Email:</strong>
-                                    <p class="text-muted mb-0" id="contactEmail">Loading...</p>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <strong>GitHub:</strong>
-                                    <p class="text-muted mb-0" id="contactGithub">
-                                        Loading...
-                                    </p>
+                        <!-- Skills Section -->
+                        <div class="card shadow-sm border-0 mb-4">
+                            <div
+                                class="card-header bg-white border-bottom py-3 d-flex justify-content-between align-items-center">
+                                <h5 class="mb-0 fw-bold">
+                                    <i class="bi bi-tools me-2 text-primary"></i>Skills
+                                </h5>
+                                <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal"
+                                    data-bs-target="#editSkillsModal">
+                                    <i class="bi bi-plus-circle me-1"></i>Add Skills
+                                </button>
+                            </div>
+                            <div class="card-body">
+                                <div id="skillsContainer">
+                                    <!-- Skills will be loaded dynamically -->
+                                    <p class="text-muted">Loading skills...</p>
                                 </div>
                             </div>
-                            <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal"
-                                data-bs-target="#editContactModal">
-                                <i class="bi bi-pencil me-1"></i>Edit Contact
-                            </button>
+                        </div>
+
+                        <!-- Contact Information -->
+                        <div class="card shadow-sm border-0">
+                            <div class="card-header bg-white border-bottom py-3">
+                                <h5 class="mb-0 fw-bold">
+                                    <i class="bi bi-envelope me-2 text-primary"></i>Contact Information
+                                </h5>
+                            </div>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6 mb-3">
+                                        <strong>Email:</strong>
+                                        <p class="text-muted mb-0" id="contactEmail">Loading...</p>
+                                    </div>
+                                    <div class="col-md-6 mb-3">
+                                        <strong>GitHub:</strong>
+                                        <p class="text-muted mb-0" id="contactGithub">
+                                            Loading...
+                                        </p>
+                                    </div>
+                                </div>
+                                <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal"
+                                    data-bs-target="#editContactModal">
+                                    <i class="bi bi-pencil me-1"></i>Edit Contact
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- Edit Profile Modal -->
     <div class="modal fade" id="editProfileModal" tabindex="-1">
@@ -303,7 +305,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
             <p class="mb-0">&copy; 2024 DevShowcase. All rights reserved.</p>
         </div>
@@ -338,7 +340,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=2.3"></script>
+    <script src="js/script.js?v=2.6"></script>
 </body>
 
 </html>
