--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2.6">
 </head>
 
 <body>
@@ -45,28 +45,30 @@
         </div>
     </nav>
 
-    <!-- Projects Section -->
-    <section class="py-5 mt-5">
-        <div class="container">
-            <!-- Header with Add Button -->
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h2 class="fw-bold section-title">My Projects</h2>
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addProjectModal">
-                    <i class="bi bi-plus-circle me-2"></i>Add New Project
-                </button>
-            </div>
+    <main class="flex-grow-1">
+        <!-- Projects Section -->
+        <section class="py-5 mt-5">
+            <div class="container">
+                <!-- Header with Add Button -->
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2 class="fw-bold section-title">My Projects</h2>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addProjectModal">
+                        <i class="bi bi-plus-circle me-2"></i>Add New Project
+                    </button>
+                </div>
 
-            <!-- Projects Grid -->
-            <div class="row g-4">
-                <!-- Projects will be loaded dynamically -->
-                <div class="col-12 text-center">
-                    <div class="spinner-border text-primary" role="status">
-                        <span class="visually-hidden">Loading projects...</span>
+                <!-- Projects Grid -->
+                <div class="row g-4">
+                    <!-- Projects will be loaded dynamically -->
+                    <div class="col-12 text-center">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Loading projects...</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- Add Project Modal -->
     <div class="modal fade" id="addProjectModal" tabindex="-1">
@@ -185,7 +187,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
             <p class="mb-0">&copy; 2024 DevShowcase. All rights reserved.</p>
         </div>
@@ -194,7 +196,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=1.2"></script>
+    <script src="js/script.js?v=2.6"></script>
 </body>
 
 </html>
