--- a/view.html
+++ b/view.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2.6">
     <style>
         .view-header {
             background: linear-gradient(135deg, #0d6efd 0%, #0a58ca 100%);
@@ -73,12 +73,12 @@
     </nav>
 
     <!-- Content Area (Dynamic) -->
-    <main id="viewContent">
+    <main id="viewContent" class="flex-grow-1">
         <!-- Will be populated by JS -->
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
             <p class="mb-0">&copy; 2024 DevShowcase. All rights reserved.</p>
         </div>
@@ -87,7 +87,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=2.3"></script>
+    <script src="js/script.js?v=2.6"></script>
 </body>
 
 </html>
